--- a/HW2/H3.html
+++ b/HW2/H3.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "HW2.js"></script>
+    <h2 id="monthYear"></h2>
+    <div id="calendar"></div>
+    <div id="calendar"></div>
+    <script src = "H3.js"></script>
 </body>
 </html>
